# dimsome

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: release-notes-template.md
scripts/: generate-tray-icon.ps1  prepare-release.mjs
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: tray-icon.rgba
src-tauri/src/: commands.rs  hotkeys.rs  lib.rs  main.rs  models.rs  schedule.rs  settings.rs  startup.rs  state.rs  windows.rs
src/assets/: scrollbar.css
src/components/: AppSlider.vue
src/lib/: api.ts  events.ts  theme.ts
src/types/: app.ts
src/views/: QuickPanelView.vue  SettingsView.vue
